--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "flowbite": "^2.5.2",
+        "@popperjs/core": "^2.11.8",
+        "preline": "^2.5.1",
         "remixicon": "^4.3.0"
     }
 }
