--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "chart.js": "^4.4.5",
+        "leaflet": "^1.9.4",
         "preline": "^2.5.1",
         "remixicon": "^4.3.0"
     }
