--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "chart.js": "^4.4.5",
         "leaflet": "^1.9.4",
         "preline": "^2.5.1",
-        "remixicon": "^4.3.0"
+        "remixicon": "^4.3.0",
+        "sweetalert2": "^11.14.4"
     }
 }
